# pyrfd

./: .flake8  .gitignore  MNIST_CNN7_oversampled.csv  README.md  benchmarking.py  covariance_estimation.py  pyproject.toml  pyrfd-environment.yml  sbatch.sh  task.yaml  test.py  visualize_covariance_fit.py
.github/workflows/: publish.yml  push.yml  pylint.yml
benchmarking/: __main__.py
benchmarking/classification/: __init__.py  __main__.py  classification_task.py  classifier.py
benchmarking/classification/cifar/: __main__.py  batch_norm_cnn.py  data.py  models.py  simple_cnn.py  simplest_cnn.py  simplest_cnn_bn_everywhere.py  simplest_cnn_bn_last.py  vgg.py
benchmarking/classification/mnist/: data.py
benchmarking/tasks/: cifar.yaml  mnist_AlgoPerf.yaml  mnist_matrix.yaml
cache/CIFAR100/Resnet18/: covariance_cache.csv  covariance_cache_2.csv
cache/CIFAR100/Resnet18_run=0/: covariance_cache.csv
cache/FashionMNIST/CNN5/: covariance_cache.csv
cache/MNIST/AlgoPerf/: covariance_cache.csv
cache/MNIST/CNN3/: covariance_cache.csv
cache/MNIST/CNN7/: covariance_cache.csv
cache/MNIST/CNN7_run=0/: covariance_cache.csv
cache/MNIST/CNN7_run=1/: covariance_cache.csv
classification/: classification_task.py
classification/mnist/: data.py
mnistSimpleCNN/: README.md  datasets.py  mnist_training.py  test.py  train.py  train_adam.py
plot/: plot_metrics.py  visualize_covariance_fit.py
pyrfd/: __init__.py  __main__.py  batchsize.py  covariance.py  optimizer.py  plots.py  regression.py  sampling.py
tests/: covariance_test.py  mnist_test.py  squaredexp_test.py
(+340 files in other folders)
