[tool.poetry]
name = "pyrfd"
version = "0.1.0"
description = ""
authors = ["Felix Benning <felix.benning@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
numpy = "^1.26.4"
torchvision = "^0.17.0"
torchsummary = "^1.5.1"
tqdm = "^4.66.2"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.0"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.2.0"
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
