[tool.poetry]
name = "pyrfd"
version = "1.0.0"
description = ""
authors = ["Felix Benning <felix.benning@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.2.0"
numpy = "^1.26.4"
torchvision = "^0.17.0"
torchsummary = "^1.5.1"
tqdm = "^4.66.2"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
lightning = "^2.2.4"
torchmetrics = "^1.4.0"
tensorboard = "^2.16.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.2.0"
matplotlib = "^3.8.3"
pylint = "^3.1.0"
flake8 = "^7.0.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
